SET(COMMON_LIBRARY_NAME exampleQtSslCommon)
SET(THE_COMMON_LIB_INCLUDE_DIR $(CMAKE_CURRENT_LIST_DIR)/../include)

FILE(GLOB_RECURSE common_lib_header_files ${THE_COMMON_LIB_INCLUDE_DIR}/*.h)
FILE(GLOB_RECURSE common_lib_source_files *.cpp)

INCLUDE_DIRECTORIES(${THE_COMMON_LIB_INCLUDE_DIR})

SET(COMMON_LIB_SOURCES ${common_lib_source_files} ${common_lib_header_files})

ADD_LIBRARY(${COMMON_LIBRARY_NAME} STATIC ${COMMON_LIB_SOURCES})
TARGET_LINK_LIBRARIES(${COMMON_LIBRARY_NAME} Qt5::Core Qt5Network)
